<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/stage_clear"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <Button
        android:id="@+id/over_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/touch"
        android:layout_below="@+id/score"
        android:text="@string/return_to" />

    <TextView
        android:id="@+id/touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/game_over"
        android:layout_below="@+id/game_over"
        android:layout_marginTop="35dp"
        android:text="@string/touch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/score"
        android:layout_alignBottom="@+id/score"
        android:layout_alignLeft="@+id/hole_text"
        android:text="@string/score_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hole_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/score"
        android:layout_alignLeft="@+id/bounus_text"
        android:text="@string/hole_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lefttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/touch"
        android:layout_below="@+id/touch"
        android:layout_marginTop="30dp"
        android:text="@string/lefttext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bounus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lefttext"
        android:layout_centerVertical="true"
        android:text="@string/bounus_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_stage"
        android:layout_alignRight="@+id/next_stage"
        android:layout_marginBottom="30dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/bounus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bounus_text"
    	android:layout_alignRight="@+id/left_time"
        android:text="@string/bounus"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/left_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lefttext"
        android:layout_alignRight="@+id/num_of_touch"
        android:text="@string/left_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/n_hole_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
 		android:layout_alignBaseline="@+id/hole_text"
        android:text="@string/n_hole_score"
        android:layout_alignRight="@+id/bounus"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/num_of_hole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hole_text"
        android:layout_alignBottom="@+id/hole_text"
        android:layout_toLeftOf="@+id/hole_text"
        android:text="@string/num_of_hole"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/num_of_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/touch"
        android:layout_alignRight="@+id/game_over"
        android:text="@string/num_of_touch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/next_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/hole_text"
        android:text="@string/nexts" />
    
</RelativeLayout>