<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/option"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/volume_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/volume_regulation"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="22dp"
        android:text="@string/volume" />

    <SeekBar
        android:id="@+id/volume_regulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/volume_text" />

    <Button
        android:id="@+id/test_sound_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/volume_text"
        android:layout_alignBottom="@+id/volume_text"
        android:layout_toRightOf="@+id/option"
        android:text="@string/test_sound" />

    <Button
        android:id="@+id/option_to_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/test_sound_button"
        android:layout_marginBottom="50dp"
        android:text="@string/return_to" />
    
    </RelativeLayout>